directive-model done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 <script src="dist/playvm.js"></script>
 <script>
-  var context = {
+  window.context = {
     newTodo: "",
     todos: [
       {title: 'first', done: true},
