modify the root api

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
   };
 
-  PlayVM.compile(document.querySelector('#demo'), context);
+  PlayVM(document.querySelector('#demo'), context);
 </script>
 </body>
 </html>
