attr-directive done :)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div id="demo">
   <input d-model="newTodo" placeholder="placeholder"/>
-  <p>{{newTodo}}</p>
+  <p data-value="{{newTodo}}">{{newTodo}}</p>
   <button d-click="add()">Add</button>
   <!--<ul>-->
   <!--<li d-repeat="item in todos">-->
